# NFS-Next-Gen

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  NFS_Next_Gen.cbp  README.md  README.rst  cmake_install.cmake  graphic.h  graphicsFunc.cpp  main.cpp  physics.h  physicsFunc.cpp
cmake_modules/: FIndSQLite3.cmake  FindSFML.cmake  FindSQLite3.cmake
dataBase/: UserData.db
include/graphics/: graphic.h  testGameElement.h  wrap.h
include/logic/: ClientState.h  Game.h  GameState.h  MapGenerator.h  ServerState.h
include/network/: Client.h  Converter.h  GameData.h  Host.h  Session.h  network.h
include/phisics/: physics.h
include/physics/: Car.h  Collision.h  IDataBase.h  IElements.h  MatrixManager.h  Obstruction.h  SQLite.h  physics.h
include/sum/: sum.h
libs/googletest/: googletest-distribution.cbp
libs/googletest/googlemock/: gmock.cbp
libs/googletest/googlemock/test/: gmock-matchers_test.cc
libs/googletest/googletest/: gtest.cbp
libs/googletest/googletest/docs/: advanced.md
libs/googletest/googletest/include/gtest/: gtest.h
logic/: ClientState.cpp  ClientState.h  Game.cpp  Game.h  MapGenerator.cpp  MapGenerator.h  ServerState.cpp  ServerState.h
src/: SQLite.cpp  main.cpp  physicsFunc.cpp
src/graphics/: gameOver.cpp  graphicFunc.cpp  login.cpp  menu.cpp  pauseInTheGame.cpp  scoreTable.cpp  wrapFunc.cpp
src/logic/: ClientState.cpp  Game.cpp  GameState.cpp  MapGenerator.cpp  ServerState.cpp
src/network/: Client.cpp
src/physics/: Obstruction.cpp  SQLite.cpp  physics.cpp  physicsFunc.cpp
src/sum/: sum.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  runTest  test.cpp  tests.cbp
test/ClientState/: ClientStateTest.cpp
test/Graphics/: graphicsMock.h  graphicsTest.cpp
test/MapGenerator/: MapGeneratorTest.cpp
test/Network/: networkMock.h  networkTest.cpp
test/Physics/: physicsMock.h  physicsTest.cpp
test/ServerState/: ServerStateTest.cpp
test/collision/: collisionNaive.cpp  collisionTest.cpp
test/dataBase/: dataBaseTest.cpp
test/gameElements/: gameElements.cpp
test/graphic/: graphicTest.cpp
test/physics/: physicsMock.h  physicsTest.cpp
test/sum/: sumTest.cpp
test/wrap/: wrapTest.cpp
